--- a/docs/Html/Day3 - Design a page/style.css
+++ b/docs/Html/Day3 - Design a page/style.css
@@ -1,158 +1,203 @@
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 body {
-    background-color: #eee;
+  background-color: #eee;
 }
 nav {
-    width: 100%;
-    height: 300px;
-    background-color: #fff;
-    font-family: sans-serif;
-    font-size:15px;
+  width: 100%;
+  height: 300px;
+  background-color: #fff;
+  font-family: sans-serif;
+  font-size: 15px;
 }
 #google {
-    width: 130px;
-    height: 15px;
-    font-family: sans-serif;
-    background-color: #fff;
+  width: 150px;
+  height: 25px;
+  font-family: sans-serif;
+  background-color: #fff;
 }
 
 nav ul {
-    float: left;
-    padding:10px 10px;;
+  float: left;
+  padding: 20px 20px;
 }
 
 ul li select {
-    font-family: sans-serif;
-    font-size: 15px;
-    border: none;
+  font-family: sans-serif;
+  font-size: 15px;
+  border: none;
+  padding: 10px;
 }
 nav ul li {
-    float: left;
-    list-style: none;
-    position: relative;
-    
+  float: left;
+  list-style: none;
+  position: relative;
 }
 
 nav ul li a {
-    display: block;
-    padding:10px;
-    text-decoration: none;
+  display: block;
+  padding: 20px;
+  text-decoration: none;
+  color: black;
 }
 nav ul li ul {
-    display: none;
-    position: absolute;
-background-color: #f3f3f3;
-border-radius: 0px 0px 4px 4px;
+  display: none;
+  position: absolute;
+  background-color: #f3f3f3;
+  border-radius: 0px 0px 4px 4px;
 }
 
 nav ul li ul li a {
-    padding: 8px 14px;
+  padding: 8px 14px;
 }
 
 nav ul li ul li a:hover {
-    background-color: #eee;
-
+  background-color: #eee;
 }
 nav ul li ul li {
-    width: 180px;
-    border-radius: 4px;
+  width: 180px;
+  border-radius: 4px;
 }
 
 nav ul li:hover ul {
-    display: block;
+  display: block;
 }
 nav ul li a:hover {
-    background-color: #eee;
+  background-color: #eee;
 }
 nav ul > li:nth-last-child(2) ul {
-    right:0px;
-    left:auto;
+  right: 0px;
+  left: auto;
 }
 .secondlist {
-    margin-left: 350px;
+  margin-left: 450px;
+  color: black;
 }
 #list {
-    top: 11px;
+  top: 11px;
 }
 #search {
-    width: 13px;
-    height: 13px;
-    background-color: #fff;
+  width: 13px;
+  height: 13px;
+  background-color: #fff;
 }
 p {
-    padding: 100px 0 10px 100px;;
-    font-size: 25px;
-    font-family: sans-serif;
+  padding: 100px 0 10px 100px;
+  font-size: 25px;
+  font-family: sans-serif;
 }
 
 #subtext {
-    padding: 05px 10px 20px 100px;;
-    font-size: 15px;
+  padding: 05px 10px 20px 100px;
+  font-size: 15px;
 }
 button {
-    padding: 05px;
-    background-color: blue;
-    border: none;
-    color: white;
-    margin-left: 100px;
-    
+  padding: 05px;
+  background-color: blue;
+  border: none;
+  color: white;
+  margin-left: 100px;
 }
 button a {
-    text-align: center;
-    text-decoration: none;
-    display: inline-block;
-    color: white;
-    font-size: 10px
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  color: white;
+  font-size: 10px;
 }
 #mainbody h1 {
-    padding: 20px;
+  padding: 20px;
 }
 #mainbody #grid-item {
-    padding: 10px;
-    display: flex;
-    flex-wrap: wrap;
+  padding: 10px;
+  display: flex;
+  flex-wrap: wrap;
 }
 #mainbody #grid-item .one {
-    position: relative;
-    display:block;
-    border: 2px #ddd solid;
-    box-sizing: border-box;
-    flex:2 2 25%;
-    margin-left: 10px;
-    list-style: none;
-    margin-bottom: 10px;
-    width: 100%;
-    background-color: white;
-
+  position: relative;
+  display: block;
+  border: 2px #ddd solid;
+  box-sizing: border-box;
+  margin-left: 30px;
+  list-style: none;
+  margin-bottom: 30px;
+  width: 500px;
+  height: 400px;
+  background-color: white;
+  flex: 20%;
 }
-#mainbody #grid-item .one iframe{
-    position: absolute;
+#mainbody #grid-item .one:first-child {
+  flex: 45%;
+}
+#mainbody #grid-item .one:last-child {
+  flex: 45%;
+}
+
+#mainbody #grid-item .one iframe {
+  position: absolute;
   width: 100%;
   height: 100%;
 }
-#cuscentric {
-    width: 150px;
-    height: 150px;
-    text-align: center;
-    margin: 5% auto;
+.one div {
+  margin-top: 60px;
+  font-size: 20px;
+  text-align: center;
 }
-#man {
-    width: 200px;
-    height: 200px;
-    text-align: center;
-    margin: 5% auto;
+#evaluate {
+  width: 150px;
+  height: 150px;
+  margin-left: 100px;
+  margin-top: 80px;
 }
 
-.one li p {
-    text-align: center;
-    margin: 5% auto;
+#offline {
+  width: 150px;
+  height: 150px;
+  margin-left: 100px;
+  margin-top: 80px;
 }
 #onlinecar {
-    width: 100px;
-    height: 100px;
-    border-radius: 50%
+  width: 150px;
+  height: 150px;
+  margin-left: 100px;
+  margin-top: 80px;
+}
+#springboard {
+  width: 150px;
+  height: 150px;
+  margin-left: 100px;
+  margin-top: 80px;
+}
+ul li i {
+  float: right;
+  padding-left: 20px;
+}
+nav div {
+  background: white;
+  color: #292929;
+  font-size: 24px;
+  padding: 0.6em;
+  cursor: pointer;
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  nav div {
+    display: block;
+  }
+
+  ul {
+    display: none;
+    position: static;
+  }
+  li {
+    margin-bottom: 1px;
+  }
+  ul li,
+  li a {
+    width: 100%;
+  }
 }
