--- a/docs/style.css
+++ b/docs/style.css
@@ -1,10 +1,16 @@
-
 header {
-    font-family: monospace;
-
+  font-family: monospace;
+  color: orangered;
 }
 
 body {
-    background-color: lightgray;
-    font-family: monospace;
+  background-color: floralwhite;
+  font-family: monospace;
+}
+
+h2 {
+  color: green;
+}
+h2 ul {
+  text-align: center;
 }
