--- a/docs/Javascript-3/homework/style.css
+++ b/docs/Javascript-3/homework/style.css
@@ -13,41 +13,41 @@
   margin: 10px;
   padding: 20px;
 }
-#select {
+#select-container {
   background-color: blue;
   margin-bottom: 10px;
   text-align: justify;
   width: 100%;
   font-size: 10px;
 }
-#myselect {
+#select-repo {
   margin-bottom: 10px;
   margin-top: 10px;
   font-size: 10px;
 }
-#root #section1 {
+#root #repo-details {
   background-color: grey;
   margin-bottom: 10px;
   width: 85%;
   height: 50%;
 }
-#root #section2 {
+#root #contributor-information {
   background-color: grey;
   width: 80%;
 }
 ul {
   list-style: none;
-  border-bottom: 1px solid #aaa;
 
  }
  ul li {
-   display: inline;
+   display: block;
    margin-right: 5px;
+   border-bottom: 1px solid #aaa;
+
 }
-ul li:last-child {
+/*ul li:last-child {
   float: right;
-  background-color: white;
-}
+}*/
 
 
  /*for  Laptop */
@@ -56,15 +56,15 @@ ul li:last-child {
         #root  {
           flex-direction: row;
       }
-      #myselect {
+      #select-repo {
         font-size: 15px;
       }
-      #select {
+      #select-container {
                 font-size: 15px;
       }
-      #root #section2 {
+      #root #contributor-information {
         width: 100%;
       }
-      #root #section1 {
+      #root #repo-details {
         width: 100%;
       }
